MCADevOrg/src/objects/GRIDTabSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For the Setting related Dynamic GRID.</description>
    <fields>
        <fullName>Display_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check if that particular org is given permission to view the tab.</description>
        <label>Display Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fieldset_Name__c</fullName>
        <label>Fieldset Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageSize__c</fullName>
        <inlineHelpText>Maximum 20 records.</inlineHelpText>
        <label>PageSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRIDTabSetting</label>
</CustomObject>